# chemboost

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
chemboost/notebooks/: XGB_Final_Classification.ipynb
chemboost/src/: main.py
chemboost/src/data/: __init__.py  data_loader.py
chemboost/src/features/: __init__.py  feature_engineering.py
chemboost/src/models/: __init__.py  xgb_classifier.py
chemboost/src/visualisation/: __init__.py  plotting.py
docs/: CONTRIBUTING.md
